# docgen

./: .gitignore  CLAUDE.md  LICENSE  README.md  docgen.config.json  pyproject.toml
.claude/commands/: export-diagrams.md  export-pdf.md  new-architecture.md  new-gantt.md  new-proposal.md  new-sow.md  new-tech-spec.md
docgen/: __init__.py  config.py  diagrams.py  export.py  gantt.py  init_project.py
examples/intelliextract-tech-spec/: aws-architecture.drawio  intelliextract-tech-spec.md
styles/: base.css  code.css  cover.css  print.css  tables.css  toc.css
templates/: architecture.md.j2  proposal.md.j2  sow.md.j2  tech-spec.md.j2
templates/partials/: appendix.md.j2  cover-page.md.j2  revision-history.md.j2  toc-placeholder.md.j2
